--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {color:  #FF2D2D;
- font-size: 14px;
+ font-size: 27px;
  margin-left: 110px;
+ background-color:#A6FFFF;
 }
 h1 {
 color: black;
