--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {color:#4F9D9D;
 }
 h1 {
 color: black;
-background-color:#8CEA00;
+background-color:#79FF79;
  margin-left: 20px;
  font-size: 40px;
  }
