--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ background-color:#79FF79;
 h2{
 color:#408080;
 font-size:25px;
-font-style: 微軟正黑體;
+font-family:Microsoft JhengHei;
 }
 
             
