--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {color:#4F9D9D;
 
 }
 h1 {
-color: black;
+color:#8E8E8E;
 background-color:#79FF79;
  margin-left: 20px;
  font-size: 40px;
@@ -14,7 +14,7 @@ background-color:#79FF79;
 h2{
 color:#408080;
 font-size:25px;
-font-family:Microsoft JhengHei;
+font-family:JhengHei;
 }
 
             
