--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2{
 color:#408080;
 font-size:25px;
 font-family:JhengHei;
-background-color:#DEFFAC;
+background-color:#CEFFCE;
 }
 
             
