--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {color:#4F9D9D;
  margin-left: 110px;
  background-color::#BBFFBB;
  font-weight: bold;
+ font-family:"Lucida Console";
 
 }
 h1 {
@@ -10,6 +11,7 @@ color:#8E8E8E;
 background-color:#79FF79;
  margin-left: 20px;
  font-size: 40px;
+ font-family:"Lucida Console";
  }
 h2{
 color:#408080;
