--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {color:#4F9D9D;
  background-color::#BBFFBB;
  font-weight: bold;
  font-family:"Lucida Console";
-
+background-image: url("http://i.imgur.com/MxXHsf8.jpg");
 }
 h1 {
 color:#8E8E8E;
